--- a/index.html
+++ b/index.html
@@ -10,40 +10,55 @@
         }
         h1,h2,h3,h4,h5,h6 {
             margin: 3em 0 1em;
+            text-align: center;
         }
         p,ul,ol {
             margin-bottom: 2em;
         }
         body{
-            background-color: #e7c5ff;
+            background-color: #99ff99;
         }
     </style>
     <body>
         <!-- Styling from https://dev.to/swyx/100-bytes-of-css-to-look-great-everywhere-19pd -->
 
-        <h1>Beispielseite</h1>
+        <h1>Chronik der Andorversen</h1>
         
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">
+            <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="width:42%;margin:auto;display:block;"/>
+        </a>
+
         <p>
-            Dies ist ein Beispiel, wie eine mit Github Pages erstellte Website aussehen könnte.
+            Chronologisch sortiertes Material von den offiziellen 
+            "Die Legenden von Andor"-Internetauftritten. Siehe "Chronik der Andorversen"
+            <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">in der Taverne</a>.
         </p>
 
         <p>
-            Unten steht eine Liste verschiedener Versionen desselben Testdokuments. Klickt auf
-            einen der Links, um das Dokument als pdf-Datei oder den Quelltext als zip-Datei
+            Hier findet ihr verschiedene Versionen dieses Projekts. Klickt auf
+            einen Link, um das Dokument als pdf-Datei oder den Quelltext als zip-Datei
             herunterzuladen.
         </p>
 
         <ul>
             <li>
-                Version 1:
-                <a href='https://github.com/butterbrotbaer/test/releases/download/v1/test.pdf'>Dokument</a>,
-                <a href='https://github.com/butterbrotbaer/test/archive/refs/tags/v1.zip'>Quelle</a>
+                v25.1 (März 2025):
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a> (10 MB),
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a> (67 MB).
             </li>
             <li>
-                Version 2:
-                <a href='https://github.com/butterbrotbaer/test/releases/download/v2/test.pdf'>Dokument</a>,
-                <a href='https://github.com/butterbrotbaer/test/archive/refs/tags/v2.zip'>Quelle</a>
+                Für vorherige Versionen siehe "Chronik der Andorversen"
+                <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">in der Taverne</a>.
             </li>
         </ul>
+
+        <p style="font-size:57%;">
+            Dieses Projekt enthält urheberrechtlich geschütztes Material von den offiziellen 
+            Internetauftritten der Marke "Die Legenden von Andor" des KOSMOS Verlags. 
+            Ich (Butterbrotbär) wandte mich an den Urheber, Michael Menzel, und erhielt die 
+            Erlaubnis, dieses Material in dieser Form nicht-kommerziell zu teilen. 
+            Alle anderen Rechte bleiben jedoch vorbehalten. 
+            Dieses Projekt ist ein Fan-Werk und wird nicht offiziell unterstützt.
+        </p>
     </body>
 </html>
