--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <ul>
             <li>
                 v25.1 (März 2025):
-                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a> (10 MB),
-                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a> (67 MB).
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a> (10 MiB),
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a> (70 MiB).
             </li>
             <li>
                 Für vorherige Versionen siehe "Chronik der Andorversen"
