--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <h1>Chronik der Andorversen</h1>
         
-        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">
             <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="width:42%;margin:auto;display:block;"/>
         </a>
 
@@ -41,6 +41,11 @@
         </p>
 
         <ul>
+            <li>
+                v25.2 (Juni 2025):
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">Dokument</a> (10 MiB),
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.2.zip">Quelltext</a> (70 MiB).
+            </li>
             <li>
                 v25.1 (März 2025):
                 <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a> (10 MiB),
