Cover image width:42% --> height:22em

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Chronik der Andorversen</h1>
         
         <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">
-            <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="width:42%;margin:auto;display:block;"/>
+            <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="height:22em;margin:auto;display:block;"/>
         </a>
 
         <p>
