--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <h1>Chronik der Andorversen</h1>
         
-        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
             <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="height:22em;margin:auto;display:block;"/>
         </a>
 
@@ -42,14 +42,19 @@
 
         <ul>
             <li>
+                v25.3 (Dezember 2025):
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">Dokument</a>,
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.3.zip">Quelltext</a>.
+            </li>
+            <li>
                 v25.2 (Juni 2025):
-                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">Dokument</a> (10 MiB),
-                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.2.zip">Quelltext</a> (70 MiB).
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.2/Chronik_der_Andorversen_v25.2.pdf">Dokument</a>,
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.2.zip">Quelltext</a>.
             </li>
             <li>
                 v25.1 (März 2025):
-                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a> (10 MiB),
-                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a> (70 MiB).
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.1/Chronik_der_Andorversen_v25.1.pdf">Dokument</a>,
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a>.
             </li>
             <li>
                 Für vorherige Versionen siehe "Chronik der Andorversen"
