Add files for adding of "Alle Helden überall"

--- a/index.html
+++ b/index.html
@@ -18,26 +18,41 @@
         body{
             background-color: #99ff99;
         }
+        .nounderline a {
+            text-decoration: none;
+        }
     </style>
     <body>
         <!-- Styling from https://dev.to/swyx/100-bytes-of-css-to-look-great-everywhere-19pd -->
 
-        <h1>Chronik der Andorversen</h1>
+        <h1>Butterbrotbärs Andor-Atelier</h1>
+
+        <p class="nounderline" style="text-align:center;">
+            <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
+                <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:11em;margin:auto;"/>
+            </a>
+
+            <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
+                <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:11em;margin:auto;"/>
+            </a>
+        </p>
+
+        <p>
+            Hier findet ihr verschiedene Versionen dieser Projekte. Klickt auf
+            einen Link, um das Dokument als pdf-Datei oder den Quelltext als zip-Datei
+            herunterzuladen.
+        </p>
+
+        <h2>Chronik der Andorversen</h2>
         
         <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
-            <img src="Cover.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="height:22em;margin:auto;display:block;"/>
+            <img src="Cover_CdA.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="height:22em;margin:auto;display:block;"/>
         </a>
 
         <p>
             Chronologisch sortiertes Material von den offiziellen 
-            "Die Legenden von Andor"-Internetauftritten. Siehe "Chronik der Andorversen"
-            <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">in der Taverne</a>.
-        </p>
-
-        <p>
-            Hier findet ihr verschiedene Versionen dieses Projekts. Klickt auf
-            einen Link, um das Dokument als pdf-Datei oder den Quelltext als zip-Datei
-            herunterzuladen.
+            "Die Legenden von Andor"-Internetauftritten. In der Taverne:
+            <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">viewtopic.php?f=11&t=10314</a>.
         </p>
 
         <ul>
@@ -57,18 +72,42 @@
                 <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a>.
             </li>
             <li>
-                Für vorherige Versionen siehe "Chronik der Andorversen"
-                <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">in der Taverne</a>.
+                Für vorherige Versionen siehe in der Taverne.
             </li>
         </ul>
 
-        <p style="font-size:57%;">
-            Dieses Projekt enthält urheberrechtlich geschütztes Material von den offiziellen 
+        <h2>Alle Helden überall</h2>
+
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
+            <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:22em;margin:auto;display:block;"/>
+        </a>
+
+        <p>
+            Fan-Spielvariante, um alle offiziellen Andor-Held*innen in (fast) allen offiziellen Andor-Legenden spielbar zu machen. In der Taverne:
+            <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=8&t=11151">viewtopic.php?f=8&t=11151</a>.
+        </p>
+
+        <ul>
+            <li>
+                v26.1 (Januar 2026):
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">Dokument</a>,
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Alle_Helden_ueberall_v26.1.zip">Quelltext</a>.
+            </li>
+            <li>
+                Für vorherige Versionen siehe in der Taverne.
+            </li>
+        </ul>
+
+
+        <h2>Hinweis</h2>
+
+        <p>
+            Diese Projekte enthalten urheberrechtlich geschütztes Material von den offiziellen 
             Internetauftritten der Marke "Die Legenden von Andor" des KOSMOS Verlags. 
-            Ich (Butterbrotbär) wandte mich an den Urheber, Michael Menzel, und erhielt die 
+            Ich (Butterbrotbär) wandte mich an Michael Menzel und erhielt die 
             Erlaubnis, dieses Material in dieser Form nicht-kommerziell zu teilen. 
             Alle anderen Rechte bleiben jedoch vorbehalten. 
-            Dieses Projekt ist ein Fan-Werk und wird nicht offiziell unterstützt.
+            Diese Projekte sind Fan-Werke und werden nicht offiziell unterstützt.
         </p>
     </body>
 </html>
