--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Chronik der Andorversen</h2>
         
         <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
-            <img src="Cover_CdA.jpg" alt="Titelbild der Chronik der Andorversen mit den vier Grundspiel-Held*innen" style="height:22em;margin:auto;display:block;"/>
+            <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:22em;margin:auto;display:block;"/>
         </a>
 
         <p>
