--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>Butterbrotbärs Andor-Atelier</title>
+    </head>
     <style>
         html {
             max-width: 70ch;
@@ -14,6 +17,7 @@
         }
         p,ul,ol {
             margin-bottom: 2em;
+            text-align: justify;
         }
         body{
             background-color: #99ff99;
@@ -29,11 +33,11 @@
 
         <p class="nounderline" style="text-align:center;">
             <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
-                <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:11em;margin:auto;"/>
+                <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="width:11em;aspect-ratio:210/297;margin:auto;"/>
             </a>
 
             <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
-                <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:11em;margin:auto;"/>
+                <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="width:11em;aspect-ratio:210/297;margin:auto;"/>
             </a>
         </p>
 
@@ -44,16 +48,15 @@
         </p>
 
         <h2>Chronik der Andorversen</h2>
-        
-        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
-            <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:22em;margin:auto;display:block;"/>
-        </a>
 
         <p>
             Chronologisch sortiertes Material von den offiziellen 
             "Die Legenden von Andor"-Internetauftritten. In der Taverne:
             <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">viewtopic.php?f=11&t=10314</a>.
         </p>
+
+        <iframe class="pdf" src="Chronik_der_Andorversen_v25.3.pdf" style="width:22em;aspect-ratio:210/297;margin:auto;display:block;">
+        </iframe>
 
         <ul>
             <li>
@@ -72,20 +75,19 @@
                 <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v25.1.zip">Quelltext</a>.
             </li>
             <li>
-                Für vorherige Versionen siehe in der Taverne.
+                Siehe vorherige Versionen in der Taverne.
             </li>
         </ul>
 
         <h2>Alle Helden überall</h2>
 
-        <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
-            <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:22em;margin:auto;display:block;"/>
-        </a>
-
         <p>
             Fan-Spielvariante, um alle offiziellen Andor-Held*innen in (fast) allen offiziellen Andor-Legenden spielbar zu machen. In der Taverne:
             <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=8&t=11151">viewtopic.php?f=8&t=11151</a>.
         </p>
+
+        <iframe class="pdf" src="Alle_Helden_ueberall_v26.1.pdf" style="width:22em;aspect-ratio:210/297;margin:auto;display:block;">
+        </iframe>
 
         <ul>
             <li>
@@ -94,7 +96,7 @@
                 <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Alle_Helden_ueberall_v26.1.zip">Quelltext</a>.
             </li>
             <li>
-                Für vorherige Versionen siehe in der Taverne.
+                Siehe vorherige Versionen in der Taverne.
             </li>
         </ul>
 
