--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         <p class="nounderline" style="text-align:center;">
             <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
-                <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="width:11em;aspect-ratio:210/297;margin:auto;"/>
+                <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:11em;aspect-ratio:210/297;margin:auto;"/>
             </a>
 
             <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
-                <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="width:11em;aspect-ratio:210/297;margin:auto;"/>
+                <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:11em;aspect-ratio:210/297;margin:auto;"/>
             </a>
         </p>
 
@@ -55,8 +55,9 @@
             <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">viewtopic.php?f=11&t=10314</a>.
         </p>
 
-        <iframe class="pdf" src="Chronik_der_Andorversen_v25.3.pdf" style="width:22em;aspect-ratio:210/297;margin:auto;display:block;">
-        </iframe>
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
+            <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:22em;aspect-ratio:210/297;margin:auto;display:block;"/>
+        </a>
 
         <ul>
             <li>
@@ -86,8 +87,9 @@
             <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=8&t=11151">viewtopic.php?f=8&t=11151</a>.
         </p>
 
-        <iframe class="pdf" src="Alle_Helden_ueberall_v26.1.pdf" style="width:22em;aspect-ratio:210/297;margin:auto;display:block;">
-        </iframe>
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Alle_Helden_ueberall_v26.1/Alle_Helden_ueberall_v26.1.pdf">
+            <img src="Cover_AH.jpg" alt="Titelbild von 'Alle Helden überall' mit den vier Grundspiel-Held*innen wie auf der offiziellen Website" style="height:22em;aspect-ratio:210/297;margin:auto;display:block;"/>
+        </a>
 
         <ul>
             <li>
