Update index.html auf CdA v26.1

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>Butterbrotbärs Andor-Atelier</h1>
 
         <p class="nounderline" style="text-align:center;">
-            <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
+            <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v26.1/Chronik_der_Andorversen_v26.1.pdf">
                 <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:11em;aspect-ratio:210/297;margin:auto;"/>
             </a>
 
@@ -55,11 +55,16 @@
             <a href="https://legenden-von-andor.de/forum/viewtopic.php?f=11&t=10314">viewtopic.php?f=11&t=10314</a>.
         </p>
 
-        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">
+        <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v26.1/Chronik_der_Andorversen_v26.1.pdf">
             <img src="Cover_CdA.jpg" alt="Titelbild von 'Chronik der Andorversen' mit den vier Grundspiel-Held*innen wie auf dem Grundspiel-Cover" style="height:22em;aspect-ratio:210/297;margin:auto;display:block;"/>
         </a>
 
         <ul>
+            <li>
+                v26.1 (Februar 2026):
+                <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v26.1/Chronik_der_Andorversen_v26.1.pdf">Dokument</a>,
+                <a href="https://github.com/butterbrotbaer/andor/archive/refs/tags/Chronik_der_Andorversen_v26.1.zip">Quelltext</a>.
+            </li>
             <li>
                 v25.3 (Dezember 2025):
                 <a href="https://github.com/butterbrotbaer/andor/releases/download/Chronik_der_Andorversen_v25.3/Chronik_der_Andorversen_v25.3.pdf">Dokument</a>,
